--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
     <div class="bar bar-right" id="barRight"></div>
     <div class="bar bar-bottom" id="barBottom"></div>
   </div>
+
+  <div class="phase phase-inSquare">
+    <div class="phaseTitle" id="phaseTitle">Вдох</div>
+    <div class="phaseSeconds" id="phaseSeconds">4</div>
+  </div>
 </div>
 
 
-          <div class="phase">
-            <div class="phaseTitle" id="phaseTitle">Вдох</div>
-            <div class="phaseSeconds" id="phaseSeconds">4</div>
-          </div>
+
         </div>
       </section>
 
