--- a/index.html
+++ b/index.html
@@ -21,18 +21,50 @@
 
         <div class="squareCard" id="squareCard" hidden>
           <div class="square" aria-hidden="true">
-  <div class="progressLayer" aria-hidden="true">
-    <div class="bar bar-left" id="barLeft"></div>
-    <div class="bar bar-top" id="barTop"></div>
-    <div class="bar bar-right" id="barRight"></div>
-    <div class="bar bar-bottom" id="barBottom"></div>
-  </div>
+  <svg
+    class="squareSvg"
+    viewBox="0 0 100 100"
+    width="240"
+    height="240"
+  >
+    <!-- базовый контур -->
+    <rect
+      x="5"
+      y="5"
+      width="90"
+      height="90"
+      rx="12"
+      ry="12"
+      fill="none"
+      stroke="var(--square-bg, rgba(255,255,255,0.25))"
+      stroke-width="4"
+    />
 
+    <!-- прогресс -->
+    <rect
+      id="squareProgress"
+      x="5"
+      y="5"
+      width="90"
+      height="90"
+      rx="12"
+      ry="12"
+      fill="none"
+      stroke="var(--accent)"
+      stroke-width="4"
+      stroke-linecap="round"
+      stroke-dasharray="360"
+      stroke-dashoffset="360"
+    />
+  </svg>
+
+  <!-- текст в центре остаётся как был -->
   <div class="phase phase-inSquare">
     <div class="phaseTitle" id="phaseTitle">Вдох</div>
     <div class="phaseSeconds" id="phaseSeconds">4</div>
   </div>
 </div>
+
 
 
 
