--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <svg
     class="squareSvg"
     viewBox="0 0 100 100"
-    width="240"
-    height="240"
+    preserveAspectRatio="xMidYMid meet"
   >
     <!-- базовый контур -->
     <rect
