--- a/index.html
+++ b/index.html
@@ -26,35 +26,41 @@
     viewBox="0 0 100 100"
     preserveAspectRatio="xMidYMid meet"
   >
-    <!-- базовый контур -->
-    <rect
-      x="5"
-      y="5"
-      width="90"
-      height="90"
-      rx="12"
-      ry="12"
-      fill="none"
-      stroke="var(--square-bg, rgba(255,255,255,0.25))"
-      stroke-width="4"
-    />
+    <!-- серый фон -->
+<path
+  d="M5 83
+     V17
+     A12 12 0 0 1 17 5
+     H83
+     A12 12 0 0 1 95 17
+     V83
+     A12 12 0 0 1 83 95
+     H17
+     A12 12 0 0 1 5 83"
+  fill="none"
+  stroke="var(--square-bg, rgba(15,23,42,0.12))"
+  stroke-width="4"
+/>
 
     <!-- прогресс -->
-    <rect
-      id="squareProgress"
-      x="5"
-      y="5"
-      width="90"
-      height="90"
-      rx="12"
-      ry="12"
-      fill="none"
-      stroke="var(--accent)"
-      stroke-width="4"
-      stroke-linecap="round"
-      stroke-dasharray="360"
-      stroke-dashoffset="360"
-    />
+<path
+  id="squareProgress"
+  d="M5 83
+     V17
+     A12 12 0 0 1 17 5
+     H83
+     A12 12 0 0 1 95 17
+     V83
+     A12 12 0 0 1 83 95
+     H17
+     A12 12 0 0 1 5 83"
+  fill="none"
+  stroke="var(--accent)"
+  stroke-width="4"
+  stroke-linecap="round"
+  stroke-dasharray="0 999"
+  stroke-dashoffset="0"
+/>
   </svg>
 
   <!-- текст в центре остаётся как был -->
