--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           <button class="seg active" id="tabSquare" type="button" aria-selected="true">Квадрат</button>
           <button class="seg" id="tab478" type="button" aria-selected="false">4-7-8</button>
         </div>
+        <div class="tabSubtext">
+  <div id="subSquare" class="sub active">Помогает собраться</div>
+  <div id="sub478" class="sub">Помогает расслабиться</div>
+</div>
+
       </header>
 
       <section class="center">
