--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <!-- серый фон -->
   <circle
     cx="50" cy="50" r="42"
+    pathLength="100"
     fill="none"
     stroke="var(--square-bg, rgba(15,23,42,0.12))"
     stroke-width="4"
@@ -62,6 +63,7 @@
   <circle
     id="circleProgress"
     cx="50" cy="50" r="42"
+    pathLength="100"
     fill="none"
     stroke="var(--accent, #2563eb)"
     stroke-width="4"
