--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     id="circleProgress"
     cx="50" cy="50" r="42"
     pathLength="100"
+    transform="rotate(-90 50 50)"
     fill="none"
     stroke="var(--accent, #2563eb)"
     stroke-width="4"
