--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 </svg>
 
 <!-- КРУГ -->
-<svg class="squareSvg circleOnly" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
+<div class="circleWrap circleOnly">
+  <svg class="squareSvg" viewBox="0 0 100 100">
   <!-- серый фон -->
   <circle
     cx="50" cy="50" r="42"
@@ -70,7 +71,8 @@
     stroke-width="4"
     stroke-linecap="round"
   />
-</svg>
+  </svg>
+</div>
 
 <!-- ТЕКСТ -->
 <div class="phase phase-inSquare">
